# icu

./: meson.build  meson_options.txt  upstream.wrap
source/: meson.build
source/common/: meson.build
source/i18n/: meson.build
source/io/: meson.build
source/layout/: meson.build
source/layoutex/: meson.build
source/stubdata/: meson.build
source/test/: meson.build
source/test/intltest/: meson.build
source/tools/ctestfw/: meson.build
source/tools/genccode/: meson.build
source/tools/icuinfo/: meson.build
source/tools/icupkg/: meson.build
source/tools/pkgdata/: meson.build
source/tools/toolutil/: meson.build
