sources = files(
  'errorcode.cpp',
  'putil.cpp',
  'umath.c',
  'utypes.c',
  'uinvchar.c',
  'umutex.cpp',
  'ucln_cmn.cpp',
  'uinit.cpp',
  'uobject.cpp',
  'cmemory.c',
  'charstr.cpp',
  'udata.cpp',
  'ucmndata.c',
  'udatamem.c',
  'umapfile.c',
  'udataswp.c',
  'ucol_swp.cpp',
  'utrace.c',
  'uhash.c',
  'uhash_us.cpp',
  'uenum.c',
  'ustrenum.cpp',
  'uvector.cpp',
  'ustack.cpp',
  'uvectr32.cpp',
  'uvectr64.cpp',
  'ucnv.c',
  'ucnv_bld.cpp',
  'ucnv_cnv.c',
  'ucnv_io.cpp',
  'ucnv_cb.c',
  'ucnv_err.c',
  'ucnvlat1.c',
  'ucnv_u7.c',
  'ucnv_u8.c',
  'ucnv_u16.c',
  'ucnv_u32.c',
  'ucnvscsu.c',
  'ucnvbocu.cpp',
  'ucnv_ext.cpp',
  'ucnvmbcs.cpp',
  'ucnv2022.cpp',
  'ucnvhz.c',
  'ucnv_lmb.c',
  'ucnvisci.c',
  'ucnvdisp.c',
  'ucnv_set.c',
  'ucnv_ct.c',
  'uresbund.cpp',
  'ures_cnv.c',
  'uresdata.c',
  'resbund.cpp',
  'resbund_cnv.cpp',
  'messagepattern.cpp',
  'ucat.c',
  'locmap.c',
  'uloc.cpp',
  'locid.cpp',
  'locutil.cpp',
  'locavailable.cpp',
  'locdispnames.cpp',
  'loclikely.cpp',
  'locresdata.cpp',
  'bytestream.cpp',
  'stringpiece.cpp',
  'stringtriebuilder.cpp',
  'bytestriebuilder.cpp',
  'bytestrie.cpp',
  'bytestrieiterator.cpp',
  'ucharstrie.cpp',
  'ucharstriebuilder.cpp',
  'ucharstrieiterator.cpp',
  'dictionarydata.cpp',
  'appendable.cpp',
  'ustr_cnv.cpp',
  'unistr_cnv.cpp',
  'unistr.cpp',
  'unistr_case.cpp',
  'unistr_props.cpp',
  'utf_impl.c',
  'ustring.cpp',
  'ustrcase.cpp',
  'ucasemap.cpp',
  'ucasemap_titlecase_brkiter.cpp',
  'cstring.c',
  'ustrfmt.c',
  'ustrtrns.cpp',
  'ustr_wcs.cpp',
  'utext.cpp',
  'unistr_case_locale.cpp',
  'ustrcase_locale.cpp',
  'unistr_titlecase_brkiter.cpp',
  'ustr_titlecase_brkiter.cpp',
  'normalizer2impl.cpp',
  'normalizer2.cpp',
  'filterednormalizer2.cpp',
  'normlzr.cpp',
  'unorm.cpp',
  'unormcmp.cpp',
  'loadednormalizer2impl.cpp',
  'chariter.cpp',
  'schriter.cpp',
  'uchriter.cpp',
  'uiter.cpp',
  'patternprops.cpp',
  'uchar.c',
  'uprops.cpp',
  'ucase.cpp',
  'propname.cpp',
  'ubidi_props.c',
  'ubidi.c',
  'ubidiwrt.c',
  'ubidiln.c',
  'ushape.cpp',
  'uscript.c',
  'uscript_props.cpp',
  'usc_impl.c',
  'unames.cpp',
  'utrie.cpp',
  'utrie2.cpp',
  'utrie2_builder.cpp',
  'bmpset.cpp',
  'unisetspan.cpp',
  'uset_props.cpp',
  'uniset_props.cpp',
  'uniset_closure.cpp',
  'uset.cpp',
  'uniset.cpp',
  'usetiter.cpp',
  'ruleiter.cpp',
  'caniter.cpp',
  'unifilt.cpp',
  'unifunct.cpp',
  'uarrsort.c',
  'brkiter.cpp',
  'ubrk.cpp',
  'brkeng.cpp',
  'dictbe.cpp',
  'rbbi.cpp',
  'rbbidata.cpp',
  'rbbinode.cpp',
  'rbbirb.cpp',
  'rbbiscan.cpp',
  'rbbisetb.cpp',
  'rbbistbl.cpp',
  'rbbitblb.cpp',
  'serv.cpp',
  'servnotf.cpp',
  'servls.cpp',
  'servlk.cpp',
  'servlkf.cpp',
  'servrbf.cpp',
  'servslkf.cpp',
  'uidna.cpp',
  'usprep.cpp',
  'uts46.cpp',
  'punycode.cpp',
  'util.cpp',
  'util_props.cpp',
  'parsepos.cpp',
  'locbased.cpp',
  'cwchar.c',
  'wintz.c',
  'dtintrv.cpp',
  'ucnvsel.cpp',
  'propsvec.c',
  'ulist.c',
  'uloc_tag.c',
  'icudataver.c',
  'icuplug.cpp',
  'listformatter.cpp',
  'ulistformatter.cpp',
  'sharedobject.cpp',
  'simplepatternformatter.cpp',
  'unifiedcache.cpp',
  'uloc_keytype.cpp',
)

common_lib = library('uc',
  sources,
  include_directories : incdir,
  c_args : '-DU_COMMON_IMPLEMENTATION',
  cpp_args : '-DU_COMMON_IMPLEMENTATION',
  link_whole: stubdata_lib,
  dependencies: [dl_dep])

icuuc_dep = declare_dependency(link_with: common_lib,
    include_directories: incdir)
meson.override_dependency('icu-uc', icuuc_dep)
