sources = files(
  'ucln_in.cpp',
  'fmtable.cpp',
  'format.cpp',
  'msgfmt.cpp',
  'umsg.cpp',
  'numfmt.cpp',
  'unum.cpp',
  'decimfmt.cpp',
  'decimalformatpattern.cpp',
  'dcfmtsym.cpp',
  'ucurr.cpp',
  'digitlst.cpp',
  'fmtable_cnv.cpp',
  'choicfmt.cpp',
  'datefmt.cpp',
  'smpdtfmt.cpp',
  'reldtfmt.cpp',
  'dtfmtsym.cpp',
  'udat.cpp',
  'dtptngen.cpp',
  'udatpg.cpp',
  'nfrs.cpp',
  'nfrule.cpp',
  'nfsubs.cpp',
  'rbnf.cpp',
  'numsys.cpp',
  'unumsys.cpp',
  'ucsdet.cpp',
  'ucal.cpp',
  'calendar.cpp',
  'gregocal.cpp',
  'timezone.cpp',
  'simpletz.cpp',
  'olsontz.cpp',
  'astro.cpp',
  'taiwncal.cpp',
  'buddhcal.cpp',
  'persncal.cpp',
  'islamcal.cpp',
  'japancal.cpp',
  'gregoimp.cpp',
  'hebrwcal.cpp',
  'indiancal.cpp',
  'chnsecal.cpp',
  'cecal.cpp',
  'coptccal.cpp',
  'dangical.cpp',
  'ethpccal.cpp',
  'coleitr.cpp',
  'coll.cpp',
  'sortkey.cpp',
  'bocsu.cpp',
  'ucoleitr.cpp',
  'ucol.cpp',
  'ucol_res.cpp',
  'ucol_sit.cpp',
  'collation.cpp',
  'collationsettings.cpp',
  'collationdata.cpp',
  'collationtailoring.cpp',
  'collationdatareader.cpp',
  'collationdatawriter.cpp',
  'collationfcd.cpp',
  'collationiterator.cpp',
  'utf16collationiterator.cpp',
  'utf8collationiterator.cpp',
  'uitercollationiterator.cpp',
  'collationsets.cpp',
  'collationcompare.cpp',
  'collationfastlatin.cpp',
  'collationkeys.cpp',
  'rulebasedcollator.cpp',
  'collationroot.cpp',
  'collationrootelements.cpp',
  'collationdatabuilder.cpp',
  'collationweights.cpp',
  'collationruleparser.cpp',
  'collationbuilder.cpp',
  'collationfastlatinbuilder.cpp',
  'strmatch.cpp',
  'usearch.cpp',
  'search.cpp',
  'stsearch.cpp',
  'translit.cpp',
  'utrans.cpp',
  'esctrn.cpp',
  'unesctrn.cpp',
  'funcrepl.cpp',
  'strrepl.cpp',
  'tridpars.cpp',
  'cpdtrans.cpp',
  'rbt.cpp',
  'rbt_data.cpp',
  'rbt_pars.cpp',
  'rbt_rule.cpp',
  'rbt_set.cpp',
  'nultrans.cpp',
  'remtrans.cpp',
  'casetrn.cpp',
  'titletrn.cpp',
  'tolowtrn.cpp',
  'toupptrn.cpp',
  'anytrans.cpp',
  'name2uni.cpp',
  'uni2name.cpp',
  'nortrans.cpp',
  'quant.cpp',
  'transreg.cpp',
  'brktrans.cpp',
  'regexcmp.cpp',
  'rematch.cpp',
  'repattrn.cpp',
  'regexst.cpp',
  'regextxt.cpp',
  'regeximp.cpp',
  'uregex.cpp',
  'uregexc.cpp',
  'ulocdata.c',
  'measfmt.cpp',
  'currfmt.cpp',
  'curramt.cpp',
  'currunit.cpp',
  'measure.cpp',
  'utmscale.c',
  'csdetect.cpp',
  'csmatch.cpp',
  'csr2022.cpp',
  'csrecog.cpp',
  'csrmbcs.cpp',
  'csrsbcs.cpp',
  'csrucode.cpp',
  'csrutf8.cpp',
  'inputext.cpp',
  'wintzimpl.cpp',
  'windtfmt.cpp',
  'winnmfmt.cpp',
  'basictz.cpp',
  'dtrule.cpp',
  'rbtz.cpp',
  'tzrule.cpp',
  'tztrans.cpp',
  'vtzone.cpp',
  'zonemeta.cpp',
  'upluralrules.cpp',
  'plurrule.cpp',
  'plurfmt.cpp',
  'selfmt.cpp',
  'dtitvfmt.cpp',
  'dtitvinf.cpp',
  'udateintervalformat.cpp',
  'tmunit.cpp',
  'tmutamt.cpp',
  'tmutfmt.cpp',
  'currpinf.cpp',
  'uspoof.cpp',
  'uspoof_impl.cpp',
  'uspoof_build.cpp',
  'uspoof_conf.cpp',
  'uspoof_wsconf.cpp',
  'decfmtst.cpp',
  'smpdtfst.cpp',
  'ztrans.cpp',
  'zrule.cpp',
  'vzone.cpp',
  'fphdlimp.cpp',
  'fpositer.cpp',
  'ufieldpositer.cpp',
  'locdspnm.cpp',
  'decNumber.c',
  'decContext.c',
  'alphaindex.cpp',
  'tznames.cpp',
  'tznames_impl.cpp',
  'tzgnames.cpp',
  'tzfmt.cpp',
  'compactdecimalformat.cpp',
  'gender.cpp',
  'region.cpp',
  'scriptset.cpp',
  'identifier_info.cpp',
  'uregion.cpp',
  'reldatefmt.cpp',
  'quantityformatter.cpp',
  'measunit.cpp',
  'filteredbrk.cpp',
  'sharedbreakiterator.cpp',
  'scientificnumberformatter.cpp',
)

i18n_lib = library('icui18n',
  sources,
  include_directories : incdir,
  link_with: [common_lib],
  c_args : '-DU_I18N_IMPLEMENTATION',
  cpp_args : '-DU_I18N_IMPLEMENTATION',
)

icui18n_dep = declare_dependency(link_with: [i18n_lib, common_lib],
    include_directories: incdir)
meson.override_dependency('icu-i18n', icui18n_dep)
