sources = files(
  'LEFontInstance.cpp',
  'OpenTypeLayoutEngine.cpp',
  'ThaiLayoutEngine.cpp',
  'ThaiShaping.cpp',
  'ThaiStateTables.cpp',
  'ArabicLayoutEngine.cpp',
  'GXLayoutEngine.cpp',
  'HanLayoutEngine.cpp',
  'IndicLayoutEngine.cpp',
  'LayoutEngine.cpp',
  'ContextualGlyphSubstProc.cpp',
  'IndicRearrangementProcessor.cpp',
  'LigatureSubstProc.cpp',
  'LookupTables.cpp',
  'MorphTables.cpp',
  'NonContextualGlyphSubstProc.cpp',
  'SegmentArrayProcessor.cpp',
  'SegmentSingleProcessor.cpp',
  'SimpleArrayProcessor.cpp',
  'SingleTableProcessor.cpp',
  'StateTableProcessor.cpp',
  'SubtableProcessor.cpp',
  'TrimmedArrayProcessor.cpp',
  'AlternateSubstSubtables.cpp',
  'AnchorTables.cpp',
  'ArabicShaping.cpp',
  'CanonData.cpp',
  'CanonShaping.cpp',
  'ClassDefinitionTables.cpp',
  'ContextualSubstSubtables.cpp',
  'CoverageTables.cpp',
  'CursiveAttachmentSubtables.cpp',
  'DeviceTables.cpp',
  'ExtensionSubtables.cpp',
  'Features.cpp',
  'GDEFMarkFilter.cpp',
  'GlyphDefinitionTables.cpp',
  'GlyphIterator.cpp',
  'GlyphLookupTables.cpp',
  'GlyphPosnLookupProc.cpp',
  'GlyphPositionAdjustments.cpp',
  'GlyphPositioningTables.cpp',
  'GlyphSubstLookupProc.cpp',
  'GlyphSubstitutionTables.cpp',
  'IndicClassTables.cpp',
  'IndicReordering.cpp',
  'LEInsertionList.cpp',
  'LEGlyphStorage.cpp',
  'LigatureSubstSubtables.cpp',
  'LookupProcessor.cpp',
  'Lookups.cpp',
  'MarkArrays.cpp',
  'MarkToBasePosnSubtables.cpp',
  'MarkToLigaturePosnSubtables.cpp',
  'MarkToMarkPosnSubtables.cpp',
  'MirroredCharData.cpp',
  'MPreFixups.cpp',
  'MultipleSubstSubtables.cpp',
  'OpenTypeUtilities.cpp',
  'PairPositioningSubtables.cpp',
  'ScriptAndLanguage.cpp',
  'ScriptAndLanguageTags.cpp',
  'ShapingTypeData.cpp',
  'SinglePositioningSubtables.cpp',
  'SingleSubstitutionSubtables.cpp',
  'SubstitutionLookups.cpp',
  'ValueRecords.cpp',
  'KhmerLayoutEngine.cpp',
  'KhmerReordering.cpp',
  'TibetanLayoutEngine.cpp',
  'TibetanReordering.cpp',
  'HangulLayoutEngine.cpp',
  'KernTable.cpp',
  'loengine.cpp',
  'ContextualGlyphInsertionProc2.cpp',
  'ContextualGlyphSubstProc2.cpp',
  'GXLayoutEngine2.cpp',
  'IndicRearrangementProcessor2.cpp',
  'LigatureSubstProc2.cpp',
  'MorphTables2.cpp',
  'NonContextualGlyphSubstProc2.cpp',
  'SegmentArrayProcessor2.cpp',
  'SegmentSingleProcessor2.cpp',
  'SimpleArrayProcessor2.cpp',
  'SingleTableProcessor2.cpp',
  'StateTableProcessor2.cpp',
  'SubtableProcessor2.cpp',
  'TrimmedArrayProcessor2.cpp',
)

layout_lib = library('layout',
  sources,
  include_directories : incdir,
  c_args : '-DU_LAYOUT_IMPLEMENTATION',
  cpp_args : '-DU_LAYOUT_IMPLEMENTATION',
  link_with: [common_lib],
)
