sources = [
  'aliastst.cpp',
  'allcoll.cpp',
  'apicoll.cpp',
  'astrotst.cpp',
  'callimts.cpp',
  'calregts.cpp',
  'caltest.cpp',
  'caltztst.cpp',
  'canittst.cpp',
  'citrtest.cpp',
  'colldata.cpp',
  'convtest.cpp',
  'currcoll.cpp',
  'collationtest.cpp',
  'fldset.cpp',
  'dadrfmt.cpp',
  'dadrcal.cpp',
  'dcfmapts.cpp',
  'decoll.cpp',
  'dtfmapts.cpp',
  'dtfmrgts.cpp',
  'dtfmtrtts.cpp',
  'dtfmttst.cpp',
  'dtptngts.cpp',
  'encoll.cpp',
  'escoll.cpp',
  'ficoll.cpp',
  'frcoll.cpp',
  'g7coll.cpp',
  'intltest.cpp',
  'itercoll.cpp',
  'itformat.cpp',
  'itmajor.cpp',
  'itutil.cpp',
  'jacoll.cpp',
  'lcukocol.cpp',
  'loctest.cpp',
  'miscdtfm.cpp',
  'mnkytst.cpp',
  'msfmrgts.cpp',
  'nmfmapts.cpp',
  'nmfmtrt.cpp',
  'numfmtst.cpp',
  'numrgts.cpp',
  'plurults.cpp',
  'plurfmts.cpp',
  'pptest.cpp',
  'regcoll.cpp',
  'restest.cpp',
  'restsnew.cpp',
  'sdtfmtts.cpp',
  'svccoll.cpp',
  'tchcfmt.cpp',
  'selfmts.cpp',
  'tfsmalls.cpp',
  'tmsgfmt.cpp',
  'trcoll.cpp',
  'tscoll.cpp',
  'tsdate.cpp',
  'tsdcfmsy.cpp',
  'tsdtfmsy.cpp',
  'tsmthred.cpp',
  'tsnmfmt.cpp',
  'tsputil.cpp',
  'tstnrapi.cpp',
  'tstnorm.cpp',
  'tzbdtest.cpp',
  'tzregts.cpp',
  'tztest.cpp',
  'ucdtest.cpp',
  'usettest.cpp',
  'ustrtest.cpp',
  'strcase.cpp',
  'transtst.cpp',
  'strtest.cpp',
  'thcoll.cpp',
  'bytestrietest.cpp',
  'ucharstrietest.cpp',
  'itrbbi.cpp',
  'rbbiapts.cpp',
  'rbbitst.cpp',
  'ittrans.cpp',
  'transapi.cpp',
  'cpdtrtst.cpp',
  'testutil.cpp',
  'transrt.cpp',
  'trnserr.cpp',
  'normconf.cpp',
  'sfwdchit.cpp',
  'jamotest.cpp',
  'srchtest.cpp',
  'reptest.cpp',
  'regextst.cpp',
  'itrbnf.cpp',
  'itrbnfrt.cpp',
  'itrbnfp.cpp',
  'ucaconf.cpp',
  'icusvtst.cpp',
  'uobjtest.cpp',
  'idnaref.cpp',
  'idnaconf.cpp',
  'nptrans.cpp',
  'punyref.c',
  'testidn.cpp',
  'testidna.cpp',
  'uts46test.cpp',
  'incaltst.cpp',
  'calcasts.cpp',
  'v32test.cpp',
  'uvectest.cpp',
  'textfile.cpp',
  'tokiter.cpp',
  'utxttest.cpp',
  'windttst.cpp',
  'winnmtst.cpp',
  'winutil.cpp',
  'csdetest.cpp',
  'tzrulets.cpp',
  'tzoffloc.cpp',
  'tzfmttst.cpp',
  'ssearch.cpp',
  'dtifmtts.cpp',
  'tufmtts.cpp',
  'itspoof.cpp',
  'simplethread.cpp',
  'bidiconf.cpp',
  'locnmtst.cpp',
  'dcfmtest.cpp',
  'alphaindextst.cpp',
  'listformattertest.cpp',
  'genderinfotest.cpp',
  'compactdecimalformattest.cpp',
  'regiontst.cpp',
  'reldatefmttest.cpp',
  'simplepatternformattertest.cpp',
  'measfmttest.cpp',
  'numfmtspectest.cpp',
  'unifiedcachetest.cpp',
  'quantityformattertest.cpp',
  'scientificnumberformattertest.cpp',
]

intltest = executable('inltest', sources,
  include_directories : [incdir, toolinc, ctestinc],
  link_with : [toolutil, i18n, common, ctestfw, stubdata])

# ICU tests assume that they are run from a certain
# place and that their test data is at a certain place
# relative to that. They do use ICU_DATA for some
# data but not all. Thus some of the tests fail.
# If you want to debug this issue, enable tests.
if get_option('runtests')
  test('Intltest', intltest,
    env : ['ICU_DATA=@0@/source/data/in'.format(meson.source_root())],
  )
endif
