sources = [
  'filestrm.c',
  'package.cpp',
  'pkgitems.cpp',
  'swapimpl.cpp',
  'toolutil.cpp',
  'unewdata.c',
  'collationinfo.cpp',
  'denseranges.cpp',
  'ucm.c',
  'ucmstate.c',
  'uoptions.c',
  'uparse.c',
  'ucbuf.c',
  'xmlparser.cpp',
  'writesrc.c',
  'pkg_icu.cpp',
  'pkg_genc.c',
  'pkg_gencmn.c',
  'ppucd.cpp',
  'flagparser.c',
  'filetools.cpp',
  'udbgutil.cpp',
  'dbgutil.cpp',
  'ucln_tu.cpp',
]

toolutil = build_target('toolutil',
  sources,
  include_directories : incdir,
  c_args : '-DU_TOOLUTIL_IMPLEMENTATION',
  cpp_args : '-DU_TOOLUTIL_IMPLEMENTATION',
  target_type : libtype
)
