sources = files(
  'filestrm.c',
  'package.cpp',
  'pkgitems.cpp',
  'swapimpl.cpp',
  'toolutil.cpp',
  'unewdata.c',
  'collationinfo.cpp',
  'denseranges.cpp',
  'ucm.c',
  'ucmstate.c',
  'uoptions.c',
  'uparse.c',
  'ucbuf.c',
  'xmlparser.cpp',
  'writesrc.c',
  'pkg_icu.cpp',
  'pkg_genc.c',
  'pkg_gencmn.c',
  'ppucd.cpp',
  'flagparser.c',
  'filetools.cpp',
  'udbgutil.cpp',
  'dbgutil.cpp',
  'ucln_tu.cpp',
)

toolutil_lib = static_library('toolutil',
  sources,
  include_directories : incdir,
  c_args : ['-DU_TOOLUTIL_IMPLEMENTATION', '-DU_ELF'],
  cpp_args : ['-DU_TOOLUTIL_IMPLEMENTATION', '-DU_ELF'],
  link_with: [i18n_lib, common_lib],
)
